--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "name": "Your Name"
+    "name": "Kazuaki Kawahara"
   },
   "nav": {
     "bio": "About",
@@ -10,21 +10,21 @@
     "contact": "Contact"
   },
   "bio": {
-    "name": "Your Name",
-    "nameJp": "あなたの名前",
-    "phd": "",
-    "phdJp": "博士（工学）",
-    "position": "Postdoctoral Researcher",
+    "name": "Kazuaki Kawahara",
+    "nameJp": "川原一晃",
+    "phd": "PhD",
+    "phdJp": "博士（科学）",
+    "position": "Assistant professor",
     "affiliation": "Institute of Engineering Innovation, The University of Tokyo",
-    "github": "https://github.com/yourusername",
-    "scholar": "https://scholar.google.com/citations?user=your-id",
-    "orcid": "https://orcid.org/0000-0000-0000-0000",
-    "researchmap": "https://researchmap.jp/yourusername",
-    "linkedin": "https://www.linkedin.com/in/yourusername/",
-    "researchInterests": "Research Interests",
+    "github": "https://github.com/kazuakikawahara",
+    "scholar": "",
+    "orcid": "https://orcid.org/0000-0002-8501-182X",
+    "researchmap": "https://researchmap.jp/kawahara691",
+    "linkedin": "",
+    "researchInterests": "Materials science, Fluoride ion battery, Bayesian statistics",
     "researchTags": [
       "Mathematics",
-      "Physics"
+      "Chemistry"
     ]
   },
   "publications": {
@@ -60,13 +60,13 @@
     "location": "Location",
     "relatedLinks": "Related Links",
     "email": "Email",
-    "emailAdress": "your.email[at]example.com",
+    "emailAdress": "kawahara[at]example.com",
     "phone": "Phone",
     "phoneNumber": "+81-3-5841-7689",
     "address": "Address",
     "addressLine1": "Electron Microscopy and Materials Science Laboratory",
     "addressLine2": "The University of Tokyo",
-    "addressLine3": "Room 419, Faculty of Engineering Bldg. 9, 2-11-16 Yayoi, Bunkyo-ku, Tokyo 113-0032, Japan",
+    "addressLine3": "Room 420, Faculty of Engineering Bldg. 9, 2-11-16 Yayoi, Bunkyo-ku, Tokyo 113-0032, Japan",
     "socialMedia": "",
     "linkedin": "",
     "facebook": "",
