--- a/public/locales/ja/translations.json
+++ b/public/locales/ja/translations.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "name": "あなたの名前"
+    "name": "川原一晃"
   },
   "nav": {
     "bio": "プロフィール",
@@ -10,21 +10,21 @@
     "contact": "連絡先"
   },
   "bio": {
-    "name": "Your Name",
-    "nameJp": "あなたの名前",
+    "name": "Kazuaki Kawahara",
+    "nameJp": "川原一晃",
     "phd": "Ph.D.",
-    "phdJp": "博士（工学）",
-    "position": "博士研究員",
+    "phdJp": "博士（科学）",
+    "position": "助教",
     "affiliation": "東京大学 総合研究機構",
-    "github": "https://github.com/yourusername",
-    "scholar": "https://scholar.google.com/citations?user=your-id",
-    "orcid": "https://orcid.org/0000-0000-0000-0000",
-    "researchmap": "https://researchmap.jp/yourusername",
-    "linkedin": "https://www.linkedin.com/in/yourusername/",
-    "researchInterests": "研究興味",
+    "github": "https://github.com/kazuakikawahara",
+    "scholar": "",
+    "orcid": "https://orcid.org/0000-0002-8501-182X",
+    "researchmap": "https://researchmap.jp/kawahara691",
+    "linkedin": "",
+    "researchInterests": "材料科学, フッ化物電池, ベイズ統計",
     "researchTags": [
       "数学",
-      "物理学"
+      "化学"
     ]
   },
   "publications": {
@@ -60,13 +60,13 @@
     "location": "所在地",
     "relatedLinks": "関連リンク",
     "email": "メールアドレス",
-    "emailAdress": "your.email[at]example.com",
+    "emailAdress": "kawahara[at]sigma.t.u-tokyo.ac.jp",
     "phone": "電話番号",
     "phoneNumber": "+81-3-5841-7689",
     "address": "住所",
     "addressLine1": "電子顕微鏡材料学研究室",
     "addressLine2": "東京大学",
-    "addressLine3": "〒113-0032 東京都文京区弥生2-11-16東京大学工学部9号館4F419号室",
+    "addressLine3": "〒113-0032 東京都文京区弥生2-11-16東京大学工学部9号館4F420号室",
     "socialMedia": "",
     "linkedin": "",
     "facebook": "",
