Update Eng. profile info.

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -60,7 +60,7 @@
     "location": "Location",
     "relatedLinks": "Related Links",
     "email": "Email",
-    "emailAdress": "kawahara[at]example.com",
+    "emailAdress": "kawahara[at]sigma.t.u-tokyo.ac.jp",
     "phone": "Phone",
     "phoneNumber": "+81-3-5841-7689",
     "address": "Address",
