--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -23,7 +23,7 @@
     "linkedin": "",
     "researchInterests": "Materials science, Fluoride ion battery, Bayesian statistics",
     "researchTags": [
-      "Mathematics",
+      "Materials Science",
       "Chemistry"
     ]
   },
