--- a/public/locales/ja/translations.json
+++ b/public/locales/ja/translations.json
@@ -23,7 +23,7 @@
     "linkedin": "",
     "researchInterests": "材料科学, フッ化物電池, ベイズ統計",
     "researchTags": [
-      "数学",
+      "材料科学",
       "化学"
     ]
   },
