--- a/public/locales/ja/translations.json
+++ b/public/locales/ja/translations.json
@@ -24,7 +24,7 @@
     "researchInterests": "材料科学, フッ化物電池, ベイズ統計",
     "researchTags": [
       "材料科学",
-      "化学"
+      "無機化学"
     ]
   },
   "publications": {
