--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -24,7 +24,7 @@
     "researchInterests": "Materials science, Fluoride ion battery, Bayesian statistics",
     "researchTags": [
       "Materials Science",
-      "Chemistry"
+      "Inorganic Chemistry"
     ]
   },
   "publications": {
